# daily-server/docs/swagger.yaml
@@ -61,11 +61,15 @@ definitions:
     properties:
       anger:
         type: integer
-      happiness:
+      fear:
+        type: integer
+      joy:
+        type: integer
+      love:
         type: integer
       sadness:
         type: integer
-      shock:
+      surprise:
         type: integer
     type: object
   model.ReportedDaily:
@@ -191,7 +195,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 'Success {"message": "Deleted Successfully"}'
           schema:
             type: object
         "400":
@@ -254,19 +258,19 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 'Success {"message": "Favourite Success"}'
           schema:
             type: object
         "400":
-          description: 'Bad Request {"message'': "Invalid JSON data"}'
+          description: 'Bad Request {"message": "Invalid JSON data"}'
           schema:
             type: object
         "401":
-          description: 'Bad Gateway {"message'': "message": "Unauthorized"}'
+          description: 'Bad Gateway {"message": "Unauthorized"}'
           schema:
             type: object
         "500":
-          description: 'Bad Gateway {"message'': "message": "Database error"}'
+          description: 'Bad Gateway {"message": "Database error"}'
           schema:
             type: object
       security:
@@ -290,7 +294,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 'Success {"message": "Image Edited Successfully"}'
           schema:
             type: object
         "400":
@@ -298,7 +302,7 @@ paths:
           schema:
             type: object
         "500":
-          description: 'Bad Gateway {"message'': "message": "Database Error"}'
+          description: 'Bad Gateway {"message": "Database Error"}'
           schema:
             type: object
       security:
@@ -349,7 +353,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 'Success {"message": "Created Successfully"}'
           schema:
             type: object
         "400":
@@ -357,7 +361,7 @@ paths:
           schema:
             type: object
         "502":
-          description: 'Bad Gateway {"message'': "message": "Failed to update daily"}'
+          description: 'Bad Gateway {"message": "Failed to update daily"}'
           schema:
             type: object
       security:
@@ -381,19 +385,19 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 'Success {"message": "Viewed Successfully"}'
           schema:
             type: object
         "400":
-          description: 'Bad Request {"message'': "Invalid JSON data"}'
+          description: 'Bad Request {"message": "Invalid JSON data"}'
           schema:
             type: object
         "401":
-          description: 'Bad Gateway {"message'': "message": "Wrong user id"}'
+          description: 'Bad Gateway {"message": "Wrong user id"}'
           schema:
             type: object
         "500":
-          description: 'Bad Gateway {"message'': "message": "Database error"}'
+          description: 'Bad Gateway {"message": "Database error"}'
           schema:
             type: object
       security:
